# Stash

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  test_gemini.py
backend/: Dockerfile  debug_inventory.py  inspect_db.py  list_models.py  pyproject.toml  quick_debug.py  test_api.py  test_barter.py  test_barter2.py  test_firestore.py  test_gemini2.py  test_gemini3.py  test_gemini_again.py  test_gemma.py  test_hypo.py  test_ml_pipeline.py  test_models.py  test_regex.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  analytics_export.py  auth.py  barter.py  billing.py  dashboard.py  delivery.py  forecasting.py  inventory.py  orders.py  suppliers.py  telegram.py  voice.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  seed_run.py  session.py
backend/app/models/: __init__.py  billing.py  buyers.py  delivery.py  inventory.py  orders.py  suppliers.py
backend/app/schemas/: user.py
backend/app/services/: billing_pdf.py  firestore_service.py  gemini.py  intent_handler.py  ml_pipeline.py  prediction.py  speech.py  telegram_svc.py  twilio_svc.py
backend/app/workers/: delivery.py  prediction_alerts.py  reminders.py  reorder.py  scheduler.py
backend/models/: label_encoders.pkl  reorder_regressor.pkl  stockout_classifier.pkl
backend/scripts/: run_with_ngrok.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/forgot/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/dashboard/: AdminDashboard.tsx  AlertCard.tsx  OperatorDashboard.tsx  OwnerDashboard.tsx  RoleDashboard.tsx  SalesChart.tsx  Sidebar.tsx  StatCard.tsx  SupplierTable.tsx  TopProductsChart.tsx  WorkerDashboardView.tsx
frontend/components/marketing/: CTASection.tsx  FeaturesGrid.tsx  HeroSection.tsx  HowItWorksSection.tsx  ProblemSection.tsx  SDGSection.tsx  SolutionSection.tsx  TechStackSection.tsx
frontend/components/shared/: DashboardVoiceAssistant.tsx  FloatingDemoButton.tsx  FloatingVoiceAssistant.tsx  Footer.tsx  LanguageSelector.tsx  Navbar.tsx  StashIcon.tsx
frontend/components/ui/: Badge.tsx  (+7 more)
frontend/contexts/: LanguageContext.tsx
frontend/hooks/: useDashboardData.ts
frontend/lib/: api.ts  backend-url.ts  translate.ts
(+22 files in other folders)
